# e-commerce-agents

./: .env.example  .gitignore  AgentBazaar - E-Commerce Multi-Agent Platform.md  AgentBazaar - Technical Design.md  CLAUDE.md  PLAN.md  README.md  docker-compose.dotnet.yml  docker-compose.yml
.github/workflows/: tests.yml
agents/: Dockerfile  patch_maf.py  pyproject.toml
agents/dotnet/: .gitignore  Directory.Packages.props  ECommerceAgents.sln
agents/evals/: README.md  evaluator.py
agents/inventory_fulfillment/: agent.py  main.py  prompts.py  tools.py
agents/mcp/: inventory_server.py
agents/orchestrator/: agent.py  handoff.py  main.py  prompts.py  routes.py
agents/order_management/: agent.py  main.py  prompts.py  tools.py
agents/pricing_promotions/: agent.py  main.py  prompts.py
agents/product_discovery/: agent.py  main.py  prompts.py  tools.py
agents/python/: Dockerfile  pyproject.toml
agents/python/config/prompts/: orchestrator.yaml  pricing-promotions.yaml  product-discovery.yaml
agents/python/config/prompts/_shared/: grounding-rules.yaml  schema-context.yaml  tool-examples.yaml
agents/python/config/workflows/: SCHEMA.md
agents/python/evals/: evaluator.py  run_evals.py
agents/python/evals/datasets/: product_discovery.json
agents/python/inventory_fulfillment/: agent.py  main.py  tools.py
agents/python/orchestrator/: agent.py  intent.py  main.py  prompts.py  routes.py
agents/python/order_management/: agent.py  tools.py
agents/python/pricing_promotions/: agent.py  tools.py
agents/python/product_discovery/: agent.py  tools.py
agents/python/review_sentiment/: agent.py
agents/python/shared/: agent_host.py  auth.py  config.py  context.py  db.py  factory.py  jwt_utils.py  middleware.py  session.py  telemetry.py  tool_inputs.py
agents/python/shared/tools/: cart_tools.py  return_tools.py  seller_tools.py
agents/python/tests/: conftest.py  test_agent_host_native.py  test_checkpoint_storage.py  test_config_loader.py  test_context_providers.py  test_destructive_tool_gates.py  test_env_aliases.py  test_handoff_orchestration.py  test_return_replace_workflow.py  test_secret_validation.py  test_session_roundtrip.py  test_smoke.py  test_stream_backpressure.py  test_tool_input_validation.py  test_visualize_workflows.py
agents/review_sentiment/: agent.py  main.py  prompts.py  tools.py
agents/shared/: agent_factory.py  agent_host.py  checkpoint_storage.py  config.py  context.py  context_providers.py  factory.py  prompt_loader.py  remote_agent.py  schema_context.py  telemetry.py  tool_examples.py  usage_db.py  workflow_loader.py
agents/tests/: conftest.py  test_agent_host_native.py  test_env_aliases.py  test_middleware.py  test_pre_purchase_workflow.py  test_visualize_workflows.py  test_workflow_loader.py
docs/: agent-flows.md  api-reference.md  architecture.drawio  architecture.md  database-schema.md  deployment.md  telemetry.md
dotnet/: Directory.Build.props  Directory.Packages.props  README.md
plans/: README.md
scripts/: dev.sh  generate_embeddings.py  migrate_tutorials_to_hugo.py  seed.py  verify-setup.sh  visualize_workflows.py
tutorials/: README.md  conftest.py
tutorials/20b-devui/python/: main.py  pyproject.toml
tutorials/20b-devui/python/tests/: test_main.py
web/: Dockerfile  package.json  playwright.config.ts  pnpm-lock.yaml
(+373 files in other folders)
